labour/test/invalid/invalid_two_start_same_value.labour
// INVALID (spec 2.1.1, design decision): a route with two start holds has one
// per hand, so they must be labelled differently; here both use start_hold: 1.
bouldering_wall "SameStartWall" {
  routes [
    bouldering_route "two left hands" {
      grade: "5A",
      grid_base_point { x: 0, y: 0 },
      holds ["0001", "0002", "0003"]
    }
  ],
  volumes [
    circle {
      pos: { x: 50, y: 50 },
      depth: 10,
      radius: 30,
      front_holds [
        hold "0001" {
          pos: { x: 0, y: 0 },
          shape: "1",
          colours [ red ],
          start_hold: 1
        },
        hold "0002" {
          pos: { x: 5, y: 5 },
          shape: "1",
          colours [ red ],
          start_hold: 1
        },
        hold "0003" {
          pos: { x: 10, y: 10 },
          shape: "1",
          colours [ red ]
        }
      ]
    }
  ]
}
